fix: unable to connect under HTTP

--- a/src/assets/i18n/en-us.json
+++ b/src/assets/i18n/en-us.json
@@ -209,9 +209,7 @@
       "screen": "Screen",
       "camera": "Camera"
     },
-    "no_stream": "No Stream",
-    "no_support": "No Support",
-    "no_support_description": "Please use this function in a secure context"
+    "no_stream": "No Stream"
   },
   "browser_unsupported": {
     "title": "Sorry, your browser is not supported",
