pref: improve peer connectivity

--- a/src/assets/i18n/en-us.json
+++ b/src/assets/i18n/en-us.json
@@ -363,6 +363,7 @@
       "exit_picture_in_picture": "Exit PIP Mode",
       "switch_picture_in_picture": "Switch PIP Mode",
       "stop": "Stop",
+      "pause": "Pause",
       "continue": "Continue"
     },
     "notification": {
