--- a/src/assets/i18n/zh-tw.json
+++ b/src/assets/i18n/zh-tw.json
@@ -362,6 +362,7 @@
       "exit_picture_in_picture": "退出子母畫面",
       "switch_picture_in_picture": "切換子母畫面",
       "stop": "停止",
+      "pause": "暫停",
       "continue": "繼續"
     },
     "clipboard_history": {
