--- a/src/assets/i18n/zh-cn.json
+++ b/src/assets/i18n/zh-cn.json
@@ -135,11 +135,15 @@
         "title": "视频通话设置",
         "video_max_bitrate": {
           "title": "视频最大比特率",
-          "description": "更改应用程序的视频最大比特率"
+          "description": "视频通话的最大比特率"
         },
         "audio_max_bitrate": {
           "title": "音频最大比特率",
-          "description": "更改应用程序的音频最大比特率"
+          "description": "视频通话的音频最大比特率"
+        },
+        "degradation_preference": {
+          "title": "降级偏好",
+          "description": "在视频通话中，当网络条件较差时，应用程序将优先考虑视频质量还是帧率"
         }
       }
     },
@@ -420,12 +424,14 @@
       "speaker_constraints": "扬声器约束",
       "not_support_display_media": "您的浏览器不支持屏幕共享",
       "not_support_user_media": "您的浏览器不支持媒体设备",
+      "video_constraints": "视频约束",
       "constraints": {
         "noise_suppression": "噪音抑制",
         "echo_cancellation": "回声消除",
         "auto_gain_control": "自动增益控制",
         "voice_isolation": "语音隔离",
-        "suppress_local_audio_playback": "抑制本地音频播放"
+        "suppress_local_audio_playback": "抑制本地音频播放",
+        "max_frame_rate": "最大帧率"
       }
     },
     "notification": {
