--- a/src/assets/i18n/zh-tw.json
+++ b/src/assets/i18n/zh-tw.json
@@ -135,11 +135,15 @@
         "title": "視訊通話設定",
         "video_max_bitrate": {
           "title": "視訊最大位元速率",
-          "description": "更改應用程式的視訊最大位元速率"
+          "description": "視訊通話的最大比特率"
         },
         "audio_max_bitrate": {
           "title": "音訊最大位元速率",
-          "description": "更改應用程式的音訊最大位元速率"
+          "description": "視訊通話的音訊最大比特率"
+        },
+        "degradation_preference": {
+          "title": "降級偏好",
+          "description": "當網路條件較差時，應用程式將優先考慮視訊質量還是幀率"
         }
       }
     },
@@ -420,12 +424,14 @@
       "speaker_constraints": "揚聲器約束",
       "not_support_display_media": "您的瀏覽器不支持螢幕共享",
       "not_support_user_media": "您的瀏覽器不支持媒體設備",
+      "video_constraints": "視訊約束",
       "constraints": {
         "noise_suppression": "噪音抑制",
         "echo_cancellation": "回聲消除",
         "auto_gain_control": "自動增益控制",
         "voice_isolation": "語音隔離",
-        "suppress_local_audio_playback": "抑制本地音訊播放"
+        "suppress_local_audio_playback": "抑制本地音訊播放",
+        "max_frame_rate": "最大幀率"
       }
     },
     "notification": {
