--- a/src/assets/i18n/en-us.json
+++ b/src/assets/i18n/en-us.json
@@ -373,7 +373,10 @@
       "pause": "Pause",
       "continue": "Continue",
       "global_mute": "Global Mute",
-      "global_unmute": "Global Unmute"
+      "global_unmute": "Global Unmute",
+      "reset_layout": "Reset Layout",
+      "compact_layout": "Compact Layout",
+      "restore": "Restore"
     },
     "notification": {
       "copy_success": "Copy success",
