--- a/src/assets/i18n/zh-tw.json
+++ b/src/assets/i18n/zh-tw.json
@@ -372,7 +372,10 @@
       "pause": "暫停",
       "continue": "繼續",
       "global_mute": "全局靜音",
-      "global_unmute": "全局恢復"
+      "global_unmute": "全局取消靜音",
+      "reset_layout": "重置佈局",
+      "compact_layout": "緊湊佈局",
+      "restore": "恢復"
     },
     "clipboard_history": {
       "title": "剪貼簿歷史"
