--- a/src/assets/i18n/en-us.json
+++ b/src/assets/i18n/en-us.json
@@ -213,7 +213,12 @@
       "screen": "Screen",
       "camera": "Camera"
     },
-    "no_stream": "No Stream"
+    "no_stream": "No Stream",
+    "float": "Float",
+    "global_mute": "Global Mute",
+    "global_unmute": "Global Unmute",
+    "reset_layout": "Reset Layout",
+    "compact_layout": "Compact Layout"
   },
   "browser_unsupported": {
     "title": "Sorry, your browser is not supported",
@@ -372,10 +377,6 @@
       "stop": "Stop",
       "pause": "Pause",
       "continue": "Continue",
-      "global_mute": "Global Mute",
-      "global_unmute": "Global Unmute",
-      "reset_layout": "Reset Layout",
-      "compact_layout": "Compact Layout",
       "restore": "Restore"
     },
     "notification": {
