--- a/src/assets/i18n/zh-cn.json
+++ b/src/assets/i18n/zh-cn.json
@@ -212,7 +212,12 @@
       "screen": "屏幕",
       "camera": "摄像头"
     },
-    "no_stream": "没有流"
+    "no_stream": "没有流",
+    "float": "浮动",
+    "global_mute": "全局静音",
+    "global_unmute": "全局取消静音",
+    "reset_layout": "重置布局",
+    "compact_layout": "紧凑布局"
   },
   "browser_unsupported": {
     "title": "抱歉，您的浏览器不受支持",
@@ -371,10 +376,6 @@
       "stop": "停止",
       "pause": "暂停",
       "continue": "继续",
-      "global_mute": "全局静音",
-      "global_unmute": "全局取消静音",
-      "reset_layout": "重置布局",
-      "compact_layout": "紧凑布局",
       "restore": "恢复"
     },
     "clipboard_history": {
